ready to deploy

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_API="http://localhost:5000/api"
+REACT_APP_API="https://streaming-api.onrender.com/api"
 REACT_APP_GOOGLE_CLIENT_ID="95563530583-cu6jr5acjohjpetfeeivvu6hq2n55q8i.apps.googleusercontent.com"
 REACT_APP_GOOGLE_CLIENT_SECRET='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'
+REACT_APP_API_HOST="https://streaming-api.onrender.com"
