--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.1",
     "toastify": "^2.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
